header class added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <br>
         <time>MAR. 2, 2023</time>
         <br><br>
-        <h2><em>Hace casi veinte años Michael Lewis publicaba Moneyball: The Art of Winning an Unfair Game, y abría de par en par la puerta para la (hasta ese momento) inexplorada relación entre el análisis de datos y el desempeño deportivo. Esa relación creció exponencialmente las últimas dos décadas y hoy es cada vez más estrecha. Este artículo intenta esbozar el punto donde la estadística explica el evento deportivo más popular del planeta: la ocurrencia del gol en un partido de fútbol.</em></h2>
+        <h2 class="header"><em>Hace casi veinte años Michael Lewis publicaba Moneyball: The Art of Winning an Unfair Game, y abría de par en par la puerta para la (hasta ese momento) inexplorada relación entre el análisis de datos y el desempeño deportivo. Esa relación creció exponencialmente las últimas dos décadas y hoy es cada vez más estrecha. Este artículo intenta esbozar el punto donde la estadística explica el evento deportivo más popular del planeta: la ocurrencia del gol en un partido de fútbol.</em></h2>
 
         <figure class="size-2">
             <img src="images/stadium-audience.jpg" alt="Hinchada de fútbol">
